refactor: update NoteTitle and RecallTitleSegments for improved title parsing
Enhanced the NoteTitle class to better parse titles into literal text and suffix fragments, removing obsolete alias handling. Updated RecallTitleSegments to align with the new title parsing logic, ensuring that fullwidth slashes are treated correctly. Adjusted related tests to reflect these changes and ensure accurate title matching behavior.