@@ -9,39 +9,29 @@ import org.junit.jupiter.api.Test;
 class NoteTitleTest {
 
   @Test
-  void escaped_fullwidth_slash_is_literal_inside_segment() {
+  void fullwidth_slash_is_literal_title_text() {
     NoteTitle noteTitle = new NoteTitle("colour／hue／／tone");
-    assertThat(noteTitle.getAliasSegmentsInOrder(), hasSize(2));
-    assertThat(noteTitle.getAliasSegmentsInOrder().get(0).stem(), equalTo("colour"));
-    assertThat(noteTitle.getAliasSegmentsInOrder().get(1).stem(), equalTo("hue／tone"));
-  }
-
-  @Test
-  void escaped_fullwidth_slash_keeps_single_segment_title_intact() {
-    NoteTitle noteTitle = new NoteTitle("cat／／kitten");
-    assertThat(noteTitle.getAliasSegmentsInOrder(), hasSize(1));
-    assertThat(noteTitle.getAliasSegmentsInOrder().get(0).stem(), equalTo("cat／kitten"));
+    assertThat(noteTitle.getRecallTitleFragments(), hasSize(1));
+    assertThat(noteTitle.getRecallTitleFragments().getFirst().stem(), equalTo("colour／hue／／tone"));
   }
 
   @Test
   void with_qualifier() {
     NoteTitle noteTitle = new NoteTitle("cat (animal)");
-    assertThat(noteTitle.getAliasSegmentsInOrder(), hasSize(1));
     assertThat(noteTitle.getQualifier().map(TitleFragment::stem), is(Optional.of("animal")));
   }
 
   @Test
   void qualifier_does_not_split_on_fullwidth_slash() {
     NoteTitle noteTitle = new NoteTitle("cat (a／b)");
-    assertThat(noteTitle.getAliasSegmentsInOrder(), hasSize(1));
     assertThat(noteTitle.getQualifier().map(TitleFragment::stem), is(Optional.of("a／b")));
   }
 
   @Test
-  void recallTitleFragments_includePrimaryAndSuffixFragmentsOnly() {
+  void recallTitleFragments_includeLiteralTitleAndMarkedSuffixFragmentsOnly() {
     NoteTitle noteTitle = new NoteTitle("colour／color");
     assertThat(noteTitle.getRecallTitleFragments(), hasSize(1));
-    assertThat(noteTitle.getRecallTitleFragments().get(0).stem(), equalTo("colour"));
+    assertThat(noteTitle.getRecallTitleFragments().getFirst().stem(), equalTo("colour／color"));
 
     noteTitle = new NoteTitle("~logy／~logical");
     assertThat(noteTitle.getRecallTitleFragments(), hasSize(2));
@@ -51,13 +41,18 @@ class NoteTitleTest {
 
     noteTitle = new NoteTitle("～によると／によれば");
     assertThat(noteTitle.getRecallTitleFragments(), hasSize(1));
-    assertThat(noteTitle.getRecallTitleFragments().get(0).stem(), equalTo("によると"));
+    assertThat(noteTitle.getRecallTitleFragments().getFirst().stem(), equalTo("によると／によれば"));
   }
 
   @Test
-  void matchesForRecall_acceptsPrimaryAndSuffixFragments_notPlainAliases() {
+  void matchesForRecall_acceptsExactTitleAndMarkedSuffixFragmentsOnly() {
     NoteTitle noteTitle = new NoteTitle("colour／color");
-    assertThat(noteTitle.matchesForRecall("colour"), is(true));
+    assertThat(noteTitle.matchesForRecall("colour／color"), is(true));
+    assertThat(noteTitle.matchesForRecall("colour"), is(false));
     assertThat(noteTitle.matchesForRecall("color"), is(false));
+
+    noteTitle = new NoteTitle("word／~logical");
+    assertThat(noteTitle.matchesForRecall("word"), is(true));
+    assertThat(noteTitle.matchesForRecall("logical"), is(true));
   }
 }
